# agent-smyth-technical

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cdk.context.json  cdk.json  plan.txt  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yaml  deploy_infra.yml  gh-pages.yml
app/: README.md  __init__.py  chat.py  config.py  kb.py  main.py  middleware.py  prompts.py  schemas.py  services.py
app/config/: README.md  __init__.py  settings.py
app/core/: README.md  handler.py  router.py
app/kb/: README.md  __init__.py  manager.py
app/middleware/: README.md  __init__.py  exception_handlers.py  request_logging.py
app/prompts/: README.md  __init__.py  templates.py
app/rag/: README.md  graph.py  nodes.py  scoring.py  state.py  utils.py
app/routers/: README.md  chat_router.py  status_router.py
app/schemas/: README.md  __init__.py  api.py  models.py
app/services/: README.md  __init__.py  initialization.py
app/utils/: README.md  document.py  technical.py
docs/: README.md  strategy.md
docs/img/: strategy.md
infrastructure/: app.py  config.py
infrastructure/stacks/: api_stack.py  base_stack.py
src/: chat.py  main.py  prompts.py
tests/: conftest.py
tests/infrastructure/: test_api_stack.py
tests/integration/: test_app.py  test_main.py
tests/unit/: test_chat.py  test_chat_advanced.py  test_chat_handler.py  test_chat_streaming.py  test_document_utils.py  test_exception_handlers.py  test_kb.py  test_knowledge_base.py  test_main.py  test_path_resolution.py  test_prompts.py  test_rag_nodes.py  test_rag_scoring.py  test_rag_utils.py  test_request_logging.py  test_schemas.py  test_settings.py  test_technical_utils.py
ui/: README.md  package-lock.json  package.json  vite.config.ts
ui/app/: App.tsx  globals.css  index.css  instrument.mjs  main.tsx
ui/app/api/: chatAPI.ts
ui/app/components/: Avatar.tsx  Chat.tsx  ChatContainer.tsx  CollapsibleSources.tsx  InputArea.tsx  InputContainer.tsx  Message.tsx  MessageContainer.tsx  MessageItem.tsx  MessageList.tsx  MessageWithViewpoints.tsx
ui/app/hooks/: useChat.ts
ui/app/lib/: utils.ts
ui/app/store/: chatStore.ts  types.ts
